The Mobile Version overflow is fixed.

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@ body {
 	color: #fff;
 	background-color: #61122f;
 	font-family: "Oxygen", sans-serif;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 /* The header :: The container is inside the Navigation Bar */
